--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "minjae-blog",
   "private": true,
   "description": "A starter for a blog powered by Gatsby and Markdown",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
+  "version": "0.0.1",
+  "author": "Minjae Kim <innersme@gmail.com>",
   "dependencies": {
+    "@kfonts/nanum-barun-gothic": "^0.1.2",
     "gatsby": "^3.8.1",
     "gatsby-plugin-feed": "^3.8.0",
     "gatsby-plugin-gatsby-cloud": "^2.8.1",
@@ -17,6 +15,7 @@
     "gatsby-plugin-offline": "^4.8.0",
     "gatsby-plugin-react-helmet": "^4.8.0",
     "gatsby-plugin-sharp": "^3.8.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^4.5.0",
     "gatsby-remark-images": "^5.5.0",
     "gatsby-remark-prismjs": "^5.5.0",
@@ -33,17 +32,17 @@
     "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
+    "gatsby-post-gen": "^1.0.0",
     "prettier": "2.2.1"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/minjaeme/minjae.me#readme",
   "keywords": [
     "gatsby"
   ],
-  "license": "0BSD",
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/minjaeme/minjae.me.git"
   },
   "scripts": {
     "build": "gatsby build",
@@ -52,6 +51,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "create": "gatsby-post-gen",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
 }
